--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -2,7 +2,7 @@ name: sample-dockerfile
 services:
 - dockerfile_path: Dockerfile
   github:
-    branch: main
+    branch: squid
     deploy_on_push: true
-    repo: digitalocean/sample-dockerfile
+    repo: unisolzp/sample-dockerfile
   name: sample-dockerfile
