--- a/squid.conf
+++ b/squid.conf
@@ -22,7 +22,7 @@ acl CONNECT method CONNECT
 http_access deny CONNECT !SSL_ports
 http_access allow localhost manager
 http_access deny manager
-acl all src 0.0.0.0/0
+acl all src all
 http_access allow all
 http_port 3128
 
@@ -30,9 +30,3 @@ via off
 forwarded_for off
 follow_x_forwarded_for deny all
 
-
-# Uncomment and adjust the following to add a disk cache directory.
-cache_dir ufs /var/cache/squid 100 16 256
-
-# Leave coredumps in the first cache dir
-coredump_dir /var/cache/squid
